--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,11 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mysql2": "^3.9.0",
+    "bcrypt": "^5.1.0"
   },
+  "type": "module",
   "devDependencies": {
     "supertest": "^7.2.2",
     "vitest": "^4.0.18"
