--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,9 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 
 COPY . .
 
-EXPOSE 3000
-CMD ["npm", "run", "dev", "--", "--host"]
+EXPOSE 5173
+CMD ["npm", "run", "dev", "--", "--host", "--port", "5173"]
